# dmd-cli

./: .gitmodules  CMakeLists.txt  README.md  datasource.hpp  dmd-render.cpp  dmd-render.hpp  dmd-state.hpp  loren.hpp  main.cpp  pch.h  phase.cpp  phase.hpp
.github/workflows/: build.yml  cmake.yml
tests/: CMakeLists.txt  phase_test.cpp
